2008-02-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Added global copy event (for the
	  clipboard ring)

2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed Bug 363631 - The selection does
	  not work for "*" symbol.

2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: fixed highlighting issue.

2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed Bug 363762 - Scrollbar does not take
	  into account collapsed regions.

2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextUtil.cs: Fixed Bug 363771
	  - Strange behavior when typing on a new file.

2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Caret.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/Caret.cs: Fixed Bug 363628 - MD text editor
	  does not recognize comments inside comments

2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: fixed Bug 363624 - variables
	  which contains keyword are wrongly recongnized

2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed control key problem.

2008-02-20  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Fixed update at delet line/delete
	  line to end commands.

2008-02-20  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/BookmarkMargin.cs: Bookmark is now scaling better.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.pidb,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/InsertTabTests.cs:
	  Found insert tab case that failed.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextEditorData.cs,